syntax = "proto3";
package dymensionxyz.dymension.lockdrop;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "dymension/lockdrop/incentives.proto";

option go_package = "github.com/dymensionxyz/dymension/x/lockdrop/types";

service Query {
  // DistrInfo returns the pool's matching gauge ids and weights.
  rpc DistrInfo(QueryDistrInfoRequest) returns (QueryDistrInfoResponse) {
    option (google.api.http).get =
        "/dymension/lockdrop/v1beta1/distr_info";
  }

  // Params returns pool incentives params.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/dymension/lockdrop/v1beta1/params";
  }
}

message QueryDistrInfoRequest {}
message QueryDistrInfoResponse {
  DistrInfo distr_info = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"distr_info\""
  ];
}

message QueryParamsRequest {}
message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}
